# langchain-localai-embeddings-openai-v1-patch

./: LICENSE  README.md  pyproject.toml
langchain_localai_embeddings_openai_v1_patch/: localai.py
