[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-localai-patch" # This is the package name users will install
version = "0.1.0" # Start with 0.1.0 and increment for new releases
description = "A patch for langchain-community's LocalAIEmbeddings to support openai>=1.0.0"
readme = "README.md"
requires-python = ">=3.9" # Adjust based on your Python version
license = { text = "MIT" } # Or "Apache-2.0" or other license
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["langchain", "localai", "embeddings", "openai", "patch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.1.0", # Ensure these match the versions you're using
    "langchain-community>=0.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-github-username/your-new-repo-name"
"Bug Tracker" = "https://github.com/your-github-username/your-new-repo-name/issues"
"Source" = "https://github.com/your-github-username/your-new-repo-name"

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
include = ["langchain_localai_patch*"] # Only include your specific package
